working on filtering pods/nodes before processing

--- a/config/samples/funnypod.yaml
+++ b/config/samples/funnypod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: notsosuperfunnyname
+  name: superfunnyname
   namespace: superfunnynamespace
   labels:
     app: mypod
